HW-9: simplify code